# cortex

./: .conflict-files  .env.template  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pull_docker_images.ps1  pull_docker_images.py  pull_docker_images.sh  rustfmt.toml  turbo.json
.auto-resolution/: .npmrc  package.json  pnpm-lock.yaml
.auto-resolution/.cargo/: config.toml
.auto-resolution/apps/backend/: .gitignore  .sdkmanrc  pom.xml
.auto-resolution/apps/frontend/: package.json
.auto-resolution/bruno/: Gemini.bru
.auto-resolution/bruno/Exercise/: Details.bru  Get All Exercises.bru
.auto-resolution/bruno/Mentorships/: Approve Application.bru  End Mentorship.bru  Get Mentoships.bru  Get available mentors.bru  See Pending applications.bru
.auto-resolution/bruno/User/: Get User By Email.bru  Re-Enable User.bru
.auto-resolution/docker/: typescript.Dockerfile
.auto-resolution/scripts/: pull_docker_images.py
.auto-resolution/scripts/initialize/: data_loader.py  pyproject.toml  resource_handlers.py
.cargo/: config.toml
.conflict-base-0/: package.json  pnpm-lock.yaml
.conflict-base-0/apps/backend/: .env.template  pom.xml
.conflict-base-0/apps/desktop/src-tauri/crates/ai_chat/: Cargo.toml
.conflict-base-0/apps/desktop/src-tauri/crates/ai_chat/src/providers/: claude.rs
.conflict-base-0/apps/desktop/src-tauri/crates/auth/: Cargo.toml
.conflict-base-0/bruno/: package-lock.json
.conflict-base-0/bruno/Auth/: Activate Account.bru  Login.bru
.conflict-base-0/bruno/Chat/: Create Chat Room.bru
.conflict-base-0/bruno/Exercise/: Details.bru
.conflict-base-0/bruno/environments/: Cortex Dev.bru
.conflict-base-0/docker/: Dockerfile.typescript
.conflict-base-0/scripts/initialize/: data.json
.conflict-side-0/: Cargo.toml  LICENSE  docker-compose.yml  package.json
.conflict-side-0/apps/desktop/: nuxt.config.ts
.conflict-side-0/apps/desktop/src-tauri/crates/error/: Cargo.toml
.conflict-side-0/apps/frontend/: nuxt.config.ts  package.json
.conflict-side-0/bruno/: package.json
.conflict-side-0/bruno/Auth/: Login.bru
.conflict-side-0/bruno/Mentorships/: Request Mentorship.bru
.conflict-side-0/bruno/User/: All Users.bru  (+1 more)
.conflict-side-0/scripts/: pull_docker_images.py
.conflict-side-1/: .env.template  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.conflict-side-1/bruno/: bruno.json
.conflict-side-1/docker/: Dockerfile
.conflict-side-1/scripts/: pull_docker_images.py
.github/workflows/: desktop-release.yml
apps/backend/: .env.template  Dockerfile  LICENSE  pom.xml
apps/desktop/: nuxt.config.ts  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/crates/ai_chat/: Cargo.toml
apps/desktop/src-tauri/crates/ai_chat/src/: lib.rs  ollama_models.rs
apps/desktop/src-tauri/crates/ai_chat/src/anthropic/: context.rs  mod.rs  service.rs
apps/desktop/src-tauri/crates/ai_chat/src/anthropic/commands/: mod.rs
apps/desktop/src-tauri/crates/ai_chat/src/commands/: mod.rs
apps/desktop/src-tauri/crates/ai_chat/src/keystore/: manager.rs  mod.rs
apps/desktop/src-tauri/crates/ai_chat/src/providers/: gemini.rs  mod.rs
apps/desktop/src-tauri/crates/ai_chat/src/session/: manager.rs  mod.rs
apps/desktop/src-tauri/crates/auth/: Cargo.toml
apps/desktop/src-tauri/crates/auth/src/: lib.rs
apps/desktop/src-tauri/crates/auth/src/commands/: mod.rs
apps/desktop/src-tauri/crates/common/: Cargo.toml
apps/desktop/src-tauri/crates/common/src/: lib.rs  state.rs
apps/desktop/src-tauri/crates/education/: Cargo.toml
apps/desktop/src-tauri/crates/education/src/: lib.rs
apps/desktop/src-tauri/crates/education/src/courses/: mod.rs
apps/desktop/src-tauri/crates/education/src/courses/commands/: mod.rs
apps/desktop/src-tauri/crates/education/src/exercises/: mod.rs
apps/desktop/src-tauri/crates/education/src/lessons/: mod.rs
apps/desktop/src-tauri/crates/education/src/lessons/commands/: mod.rs
apps/desktop/src-tauri/crates/education/src/modules/: mod.rs
apps/desktop/src-tauri/crates/education/src/modules/commands/: mod.rs
apps/desktop/src-tauri/crates/education/src/roadmaps/: mod.rs
apps/desktop/src-tauri/crates/education/src/roadmaps/commands/: mod.rs
apps/desktop/src-tauri/crates/error/src/: lib.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  window.rs
apps/desktop/src-tauri/src/ai/: mod.rs  ollama.rs  ollama_models.rs
apps/desktop/src-tauri/src/ai/commands/: mod.rs
apps/desktop/src-tauri/src/auth/: mod.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/commands/ai/: mod.rs  ollama.rs
apps/desktop/src-tauri/src/education/: mod.rs  models.rs
apps/desktop/src-tauri/src/education/courses/: mod.rs
apps/desktop/src-tauri/src/education/exercises/: mod.rs
apps/desktop/src-tauri/src/education/exercises/commands/: mod.rs
apps/desktop/src-tauri/src/education/lessons/: mod.rs
apps/desktop/src-tauri/src/education/lessons/commands/: mod.rs
apps/desktop/src-tauri/src/education/modules/: mod.rs
apps/desktop/src-tauri/src/education/modules/commands/: mod.rs
apps/desktop/src-tauri/src/education/roadmaps/: mod.rs
apps/desktop/src-tauri/src/education/roadmaps/commands/: mod.rs
apps/frontend/: nuxt.config.ts  package.json
bruno/Auth/: Activate Account.bru  Login.bru  Refresh Token.bru  Register.bru
bruno/Chat/: See messages.bru
bruno/Exercise/: Result.bru
bruno/Mentorships/: Add Note to Mentoship.bru  Apply to become a mentor.bru  Create Mentoship.bru  Reject Mentor Application.bru
bruno/Payments/: Activate License Key.bru  Deactivate License Key.bru  Validate License Key.bru
bruno/User/: Reset Password.bru  Update User.bru  User Info.bru
bruno/environments/: Cortex Dev.bru  Cortex Docker.bru
docker/: Dockerfile  typescript.Dockerfile
scripts/: docker_build.py  pull_docker_images.py
scripts/initialize/: api_client.py  data.json  data_loader.py  main.py  pyproject.toml  resource_handlers.py
(+1495 files in other folders)
