[workspace]
members = [
    "apps/desktop/src-tauri",
    "apps/desktop/src-tauri/crates/common",
    "apps/desktop/src-tauri/crates/auth",
    "apps/desktop/src-tauri/crates/education",
    "apps/desktop/src-tauri/crates/ai_chat",
    "apps/desktop/src-tauri/crates/error",

]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
tauri = { version = "2.0.6", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.2"
tauri-plugin-oauth = "2"
tauri-plugin-store = "2.1.0"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-fs = "2.0.3"
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
thiserror = "2.0.1"
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["full"] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
