[package]
name = "cortex"
version = "0.1.0"
description = "Cortex Desktop Application for Premium Users"
authors = ["you"]
license = ""
repository = "https://github.com/cuervolu/cortex"
edition = "2021"
rust-version = "1.71"
workspace = "../../../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cortex_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
tauri = { version = "2.0.0-rc.15", features = ["protocol-asset"] }
tauri-plugin-devtools = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-log = { version = "2.0.0-rc.0", features = ["colored"] }
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-process = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-store = "2.0.0-rc.0"
tauri-plugin-clipboard-manager = "2.0.0-rc.0"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "v2" }
tauri-plugin-notification = "2.0.0-rc.5"
reqwest = { version = "0.12.7", features = ["json"] }
sysinfo = "0.31.2"
thiserror = "1.0.64"
anyhow = "1.0.89"
font-kit = "0.14.2"
ollama-rs = { version = "0.2.1", features = ["stream"] }
lazy_static = "1.5.0"
futures = "0.3.30"
scraper = "0.20.0"
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4.38",features = ["serde"] }
regex = "1.10.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0-rc.0"
tauri-plugin-window-state = "2.0.0-rc.0"
