[package]
name = "ai_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
error = { path = "../error" }
common = {path = "../common"}
tauri-plugin-store = {workspace = true}
tauri-plugin-stronghold = {workspace = true}
tauri = { workspace = true }
reqwest = {workspace = true}
futures = "0.3.31"
bytes = "1.7.2"