[package]
name = "education"
version = "0.1.0"
edition = "2021"

[dependencies]
log = {workspace = true}
serde = {workspace = true}
reqwest = { workspace = true }
tokio = {workspace = true}
tauri = {workspace = true}
serde_json = {workspace = true}
chrono = {workspace = true}
error = {path = "../error"}
common = {path = "../common"}
