[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
error = {path = "../error"}
common = {path = "../common"}
tauri = {workspace = true}
tauri-plugin-oauth = {workspace = true}
base64 = "0.22.1"
rand = "0.8.5"
sha2 = "0.10.8"
serde = {workspace = true}
log = {workspace = true}